--- a/Demo_UploadFileAPI/Web.config
+++ b/Demo_UploadFileAPI/Web.config
@@ -7,7 +7,8 @@
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.7.2"/>
+    <!--設定 ASP.NET 可以支援上傳檔案的最大容量數(以 KB 為單位)。 Value = [MB * 1024]-->
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="819200" executionTimeout="300"/>
   </system.web>
   <system.webServer>
     <handlers>
@@ -17,6 +18,12 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
         preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    <security>
+      <requestFiltering>
+        <!--設定 IIS 可以支援上傳檔案的最大容量數(以 Bytes 為單位)。 Value = [MB * 1024 * 1024]-->
+        <requestLimits maxAllowedContentLength="1314572800" />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
